- Changed primary color to yellow. - Fixed bus-badge text-truncate.

--- a/frontend/src/global.scss
+++ b/frontend/src/global.scss
@@ -73,38 +73,30 @@
 }
 
 .bus-badge {
-    background-color: transparent;
-    padding-right: 4px;
-    position: relative;
-    margin-right: 8px;
-    border: 3px solid #ccc;
-    /* Aggiunge un bordo grigio */
-  
-    display: flex;
-    align-items: center;
-  
-    font-size: 18px;
-    /* Imposta la dimensione del badge desiderata (13px DEFAULT) */
-    color: var(--ion-color-contrast);
-    /* Imposta il colore del testo del badge (TEMA CHIARO/SCURO) */
+  background-color: transparent;
+  padding: 6px 8px;
+  margin-right: 8px;
+  border: 3px solid #ccc;
+  border-radius: 10px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
-    //rounded
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-right: 8px;
-    padding-left: 8px;
-    border-radius: 10px;
-  }
-  
-  .bus-badge::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background-color: blue;
-  }
+.bus-badge ion-icon {
+  vertical-align: middle;
+}
+
+.bus-badge::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--ion-color-primary);
+}
+
 
   .big-hour{
     font-size: 22px;
